new update for readme

--- a/client/main.html
+++ b/client/main.html
@@ -1,3 +1,5 @@
 <head>
   <title>medium-blog</title>
+  
+  <link rel="shortcut icon" href="https://cdn-static-1.medium.com/_/fp/icons/favicon-medium.TAS6uQ-Y7kcKgi0xjcYHXw.ico" class="js-favicon is-default">
 </head>
